cmake_minimum_required(VERSION 2.8.7)
project(tcp)

set(CMAKE_C_STANDARD 11)
include_directories(include)
include_directories(progbase)
file(GLOB LIB_SOURCES "./*.c" "src/*.c")
set(SOURCE_FILES main.c progbase/list.h progbase/list.c src/workwithstrings.c include/workwithstrings.h src/parsepath.c include/parsepath.h src/jsonparser.c include/jsonparser.h src/fileparser.c include/fileparser.h src/findelements.c include/findelements.h include/result.h src/result.c src/choosefunction.c include/choosefunction.h src/fav.c include/fav.h)
add_executable(tcp ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} jansson event)
set_property(TARGET ${CMAKE_PROJECT_NAME} PROPERTY C_STANDARD 99)
SET(CMAKE_C_FLAGS "-std=c99 -Wall")